manifests/apps/frontend/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - os4ml/os4ml-gateway
  hosts:
    - '*'
  http:
    - name: "frontend-route"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.os4ml.svc.cluster.local
            port:
              number: 80
